<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How Was the Service</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="ok_10">Ok (10%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="round_up_tip">Round Up Tip?</string>
    <string name="tip_amount">Tip Amount %s</string>
    <string name="calculate">Calculate</string>
    <string name="label">Label</string>
</resources>